test_scores/negative_dimers/features/Q969H0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q969H0.pkl.xz